--- a/_posts/2020-04-21-Flask.md
+++ b/_posts/2020-04-21-Flask.md
@@ -9,4 +9,130 @@ author: "Michał"
 
 # Flask
 
-Struktura projektu
+Moim celem jest zbudowanie szybkiego prototypu strony, na której mógłbym pokazywać zebrane dane dotyczące [ogłoszeń Toyoty Yaris](https://mgurg.github.io/scrapy/2019/12/31/web-scrapping-otomoto.html). W związku z tym zabrałem się za przebudowę [początkowego kodu strony](https://mgurg.github.io/python/2020/01/23/python-flask-intro.html).
+
+Pomocny przy tym był tutorial z [Alicja & IT](http://www.alicja.it/category/flask/)
+
+## Bootstrap
+
+Początkowo chciałem ominąć całkiem warstwę wizualną, ale w 2020 nie wypada nikomu pokazywać gołego HTML-a. Żeby nie tracić czasu na nadrabianie zaległości z CSS i HTML postanowiłem skorzystać z [Bootstrap](https://getbootstrap.com/).
+
+ Z *Bootstrap* też nie mam żadnego doświadczenia, ale ma dobrą dokumentację i styluje wszystkie elementy HTML-a. Zastanawiałem się nad alternatywą w postaci czegoś nowszego (*Bulma*, *TailwindCSS*) , ale ponieważ nie zamierzam doktoryzować się z webdeveloperki to uznałem że warto zacząć od starszego ale pewniejszego rozwiązania.
+
+Po godzinie pracy udało mi się uzyskać miłą dla oka stronę. Struktura projektu:
+
+```
+.
+|-- helloworld.sock
+|-- myproject.py
+|-- static
+|   |-- css
+|   |   |-- bootstrap-grid.min.css
+|   |   |-- bootstrap.min.css
+|   |   |-- bootstrap-reboot.min.css
+|   `-- js
+|       |-- bootstrap.bundle.min.js
+|       `-- bootstrap.min.js
+|-- templates
+|   |-- base.html
+|   |-- home.html
+|   `-- otomoto.html
+`-- wsgi.py
+```
+
+
+
+Szablon strony składa się z dwóch części. Głównego pliku `base.html` - nagłówek, nawigacja etc. i plików z treścią: `home.html`, `otomoto.html`
+
+```html
+<!DOCTYPE html>
+<html lang="pl" dir="ltr">
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" media="screen" href="{{ url_for('static', filename='css/bootstrap.min.css') }}"> 
+	{% if title %}
+    <title>{{ title }} - Microblog</title>
+    {% else %}
+    <title>Welcome to Microblog</title>
+    {% endif %}
+</head>
+
+<body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">Navbar</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+                <a class="nav-item nav-link active" href="{{ url_for('home') }}">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-item nav-link" href="{{ url_for('otomoto') }}">Otomoto</a>
+                <a class="nav-item nav-link" href="#">Pricing</a>
+                <a class="nav-item nav-link disabled" href="#">Disabled</a>
+            </div>
+        </div>
+    </nav>
+    <div class="container-fluid">
+
+        {% block content %}
+		{% endblock %}
+
+    </div>
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+</body>
+
+</html>
+```
+
+
+
+otomoto.html:
+
+```html
+{% extends "base.html" %}
+
+{% block content %}
+
+    <h1>Predykcja ceny - Toyota Yaris II</h1>
+	<p>Analiza na podstawie dany zbieranych od 01.01.2020 </p>
+    <p>Model: Toyota Yaris II.</p>
+	
+    <img src ="./static/foo.png" >
+	
+{% endblock %}
+```
+
+
+
+## Formularze
+
+na potrzeby interakcji z użytkownikiem będę potrzebował formularz w którym będzie można wprowadzić parametry ogłoszenia. Wygląda na to że w Flask odpowiada za to Flask-WTF
+
+```
+pip install flask-wtf
+```
+
+
+
+Grafiki
+
+
+
+### Request Dispatching
+
+```python
+(ml_env) lambda@michal:~/environments/ml_env/www/helloworld$ python
+>>> from myproject import app
+>>> app.url_map
+Map([<Rule '/otomoto' (GET, HEAD, OPTIONS) -> otomoto>,
+ <Rule '/' (GET, HEAD, OPTIONS) -> home>,
+ <Rule '/static/<filename>' (GET, HEAD, OPTIONS) -> static>])
+>>>
+```
+
