add file permision description

--- a/_posts/2020-04-23-Linux.md
+++ b/_posts/2020-04-23-Linux.md
@@ -7,9 +7,7 @@ author: "Michał"
 
 
 
-# Ubuntu
-
-Dowiązanie symboliczne:
+## Dowiązanie symboliczne
 
 ```
 ln -s /home/lambda/environments/ml_env/www/helloworld/static/img ~/py_otomoto/img
@@ -19,5 +17,49 @@ Tworzy w katalogu `py_otomoto` link do folderu w `www` . Ogólny zapis:
 
 ```
 ln -s katalog_istniejący katalog_symboliczny
+```
+
+
+
+## File permissions
+
+**r** = read permission
+**w** = write permission
+**x** = execute permission
+ **-** = no permission 
+
+
+
+| **Number** | **Permission Type**   | **Symbol** |
+| ---------- | --------------------- | ---------- |
+| 0          | No Permission         | ---        |
+| 1          | Execute               | --x        |
+| 2          | Write                 | -w-        |
+| 3          | Execute + Write       | -wx        |
+| 4          | Read                  | r--        |
+| 5          | Read + Execute        | r-x        |
+| 6          | Read +Write           | rw-        |
+| 7          | Read + Write +Execute | rwx        |
+
+Sprawdzenie praw dostępu do pliku:
+
+```bash
+(ml_env) lambda@michal:~/py_otomoto$ ls -l
+total 3148
+-rw-rw-r--  1 lambda lambda    8438 Apr 26 12:04 carDataParser.py
+-rw-rw-r--  1 lambda lambda    5193 Apr 26 12:04 carFeatureParser.py
+-rw-rw-r--  1 lambda lambda    1651 Apr 26 12:04 dbData.py
+
+```
+
+Zmianan uprawnień:
+
+```bash
+# allow everyone to execute the script
+chmod +x script.sh
+
+# allow owner to execute the script
+chmod u=rwx,go= script.sh
+chmod u+x script.sh
 ```
 
