Add: while / for loop

--- a/_posts/2020-04-23-Linux.md
+++ b/_posts/2020-04-23-Linux.md
@@ -21,6 +21,10 @@ ln -s katalog_istniejący katalog_symboliczny
 
 
 
+Bonus: [Dowiązania twarde](https://pl.wikipedia.org/wiki/Dowi%C4%85zanie_twarde)
+
+
+
 ## File permissions
 
 **r** = read permission
@@ -63,3 +67,17 @@ chmod u=rwx,go= script.sh
 chmod u+x script.sh
 ```
 
+### Podstawowe komendy
+
+```bash
+/? –help --help --h # pomoc
+mkdir / md 			# tworzenie folderu
+rmdir / rd 			# usuwanie folderu
+move 				# przenoszenie zmiana nazwy
+dir / ls 			# wyświetlenie zawartości folderu
+cd 					# przejście do innej lokalizacji
+pwd 				# obecny folder (linux, osx)
+type / cat 			# wyświetlenie zawartości pliku
+touch 				# utworzenie pliku
+echo Lalalalla > plik.txt
+```
