--- a/_posts/2020-04-21-Flask.md
+++ b/_posts/2020-04-21-Flask.md
@@ -13,6 +13,201 @@ Moim celem jest zbudowanie szybkiego prototypu strony, na której mógłbym poka
 
 Pomocny przy tym był tutorial z [Alicja & IT](http://www.alicja.it/category/flask/)
 
+## Model View Controller (MVC)
+
+Wzorzec MVC zakłada podział aplikacji na trzy główne części, aby uprościć projektowanie aplikacji posiadających graficzne interfejsy użytkownika:
+
+**Model** – to reprezentacja problemu bądź logiki aplikacji + dane
+**Widok** – opisuje, jak wyświetlić pewną część modelu w ramach interfejsu użytkownika; może składać się z podwidoków odpowiedzialnych za mniejsze części interfejsu.
+**Kontroler** – przyjmuje dane wejściowe od użytkownika i reaguje na jego poczynania, zarządzając aktualizacje modelu oraz odświeżenie widoków.
+
+![https://upload.wikimedia.org/wikipedia/commons/thumb/a/a0/MVC-Process.svg/500px-MVC-Process.svg.png](https://upload.wikimedia.org/wikipedia/commons/thumb/a/a0/MVC-Process.svg/500px-MVC-Process.svg.png)
+
+Ze względu na ilość elementów składowych aplikacji webowej, logika biznesowa powinna znajdować się w kodzie w ustalonym miejscu - najlepiej w modelach, podążając w myśl idei “*fat models, thin views*”.
+
+Ilość kodu odpowiedzialnego za logikę biznesową w poszczególnych elementach
+
+```
+Model > Kontroler > Widok
+```
+
+
+
+## Template language - Jinja2
+
+Korzystanie z szablonów jest możliwe po imporcie odpowiedniego modułu:
+
+```python
+from flask import render_template
+```
+
+Zasada działania Jinja2 polega na umieszczaniu w plikach źródłowych (html) znaczników, które następnie są zastępowane generowaną przez aplikację treścią:
+
+`{{ wyrażenie }}` - w tym miejscu podstawiona zostanie wartość wyrażenia
+`{% block %}` - tak tworzymy blok, np., na potrzeby pętli, warunku; pamiętaj o zamknięciu bloku `{% endblock %}`
+
+`{# … #}` – dla komentarzy, które nie będą wyświetlać się na stronie
+
+`|` – znacznik oddzielający filtry od zmiennych
+
+`{{ abcd }}` – podstawi wartość zmiennej abcd
+`{{ url_for('hello') }}` – podstawi URL wywołujący funkcję hello()
+
+Przykład wykorzystania:
+
+```python
+from hello_world import app
+from flask import render_template
+
+# @app.route('/')
+# def index():
+#      return "Hello world!"
+
+@app.route('/')
+def index():
+    navigation = [
+        {
+            'href': 'otomoto',
+            'caption': 'Analiza ogłoszeń'
+        },
+        {
+            'href': 'price_predict',
+            'caption': 'Predykcja ceny'
+        }
+    return render_template('index.html', navigation=navigation)
+```
+
+Dodanie kolejnych podstron odbywa się poprzez dodanie włąsciwego `@app.route("/new_path")` Żeby uniknąć duplikowania nawigacji można wykorzystać **context processors**. Zmienne zdefiniowane w postaci słownika będą dodawane do każdego widoku w trakcie jego tworzenia:
+
+```python
+@app.context_processor
+def inject_variables():
+    return dict(
+        navigation = [
+            {
+                'href': '/',
+                'caption': 'Home'
+            },
+            {
+                'href': 'otomoto',
+                'caption': 'Analiza ogłoszeń'
+            },
+            {
+                'href': 'price_predict',
+                'caption': 'Predykcja ceny'
+            }
+        ])
+```
+
+## Blueprints 
+
+Mechanizm umożliwiający rozbicie projektu na mniejsze podzbiory. Analiza na przykładzie kodu, `views.py`:
+
+```python
+# częśc kodu zostałą przeniesiona do pliku report.py 
+from .report import report_blueprint
+app.register_blueprint(report_blueprint)
+
+#
+# @app.route('/report')
+# def report():
+#     return render_template('report.html')
+
+```
+
+Plik `report.py`:
+
+```python
+from flask import render_template
+from flask import Blueprint
+
+report_blueprint = Blueprint('report_blueprint', __name__)
+
+@report_blueprint.route('/report') #@report_blueprint zamiast org. @app
+def report():
+    return render_template('report.html')
+```
+
+Zmianie musiał ulec też plik base.html:
+
+ `url_for('report_blueprint.report')` zamiast `url_for('report')`
+
+W tej chwili doszedł wyłącznie plik report.py w głównym folderze projektu. Przeniosłem go do folderu blueprints/report pod nazwą `__init__.py`
+
+```bash
+│   forms.py
+│   models.py
+│   report.py # <- do usunięcia
+│   views.py
+│   __init__.py
+│
+├───blueprints
+│   └───report
+│           __init__.py # <- nowa lokalizacja report.py
+│
+├───static
+│   ├───css
+│   ├───img
+│   └───js
+│
+├───templates
+        404.html
+        500.html
+        base.html
+        index.html
+        price_predict.html
+        report.html
+```
+
+W views.py wystarczy zmienić tylko jedną linijkę żeby całość działała:
+
+```python
+from .blueprints.report import report_blueprint
+```
+
+
+
+## Baza danych
+
+Moduł Flask-SQLAlchemy realizuje wsparcie SQLAlchemy dla Flaska. O ile w głownym projekcie trzymałem się czystego SQL, to Flask był dobrtyym momentem żeby zainteresować się ORM *(Object Relation Mapper)*.
+
+SQL:
+
+Zalety:
+- przydatny w procesie debugowania
+- wydajny
+
+Wady:
+- implementacje zapytań mogą być podatne na atak SQL Injection
+- implementacja zapytań zależna od rodzaju silnika
+- zapytania wymagają aktualizacji podczas każdej modyfikacji struktury tabel
+- Kod SQL wymieszany z kodem aplikacji
+
+Mapowanie obiektowo - relacyjne polega na mapowaniu danych w postaci tabelarycznej (relacji w bazie danych) na obiekty i odwrotnie.
+
+`__init__.py`
+
+```python
+from flask import Flask
+from flask_sqlalchemy import SQLAlchemy
+
+app = Flask(__name__)
+app.config['DEBUG'] = True
+app.config['SECRET_KEY'] = 'verysecretkey'
+app.config['SQLALCHEMY_DATABASE_URI'] = 'sqlite:///baza.db'
+app.config['SQLALCHEMY_TRACK_MODIFICATIONS'] = False
+
+db = SQLAlchemy(app)
+
+from hello_world import views
+```
+
+
+
+
+
+
+
 ## Bootstrap
 
 Początkowo chciałem ominąć całkiem warstwę wizualną, ale w 2020 nie wypada nikomu pokazywać gołego HTML-a. Żeby nie tracić czasu na nadrabianie zaległości z CSS i HTML postanowiłem skorzystać z [Bootstrap](https://getbootstrap.com/).
@@ -51,6 +246,10 @@ na potrzeby interakcji z użytkownikiem będę potrzebował formularz w którym 
 ```
 pip install flask-wtf
 ```
+
+
+
+
 
 
 
