--- a/_posts/2020-04-23-Linux.md
+++ b/_posts/2020-04-23-Linux.md
@@ -19,8 +19,6 @@ Tworzy w katalogu `py_otomoto` link do folderu w `www` . Ogólny zapis:
 ln -s katalog_istniejący katalog_symboliczny
 ```
 
-
-
 Bonus: [Dowiązania twarde](https://pl.wikipedia.org/wiki/Dowi%C4%85zanie_twarde)
 
 
@@ -56,7 +54,7 @@ total 3148
 
 ```
 
-Zmianan uprawnień:
+Zmiana uprawnień:
 
 ```bash
 # allow everyone to execute the script
@@ -81,3 +79,7 @@ type / cat 			# wyświetlenie zawartości pliku
 touch 				# utworzenie pliku
 echo Lalalalla > plik.txt
 ```
+
+`source` - Executes the bash script within the existing environment.
+
+`./` - Environment used by the executed command is destroyed when script is done running
