--- a/_posts/2020-04-21-Flask.md
+++ b/_posts/2020-04-21-Flask.md
@@ -31,7 +31,10 @@ Ilość kodu odpowiedzialnego za logikę biznesową w poszczególnych elementach
 Model > Kontroler > Widok
 ```
 
+> MVT w django jest nieco podobne do mvc (oczywiście nie jest tym samym bo by tego pytania nawet nie było). To co odróżnia jedno od drugiego to to że w MVT nie ma kontrollera czyli tego C. Controller ma za zadanie kontrolować modele i widoki. W django mamy modele, widoki ale nie mamy controllera więc co je kontroluje? Okazuje się że controllerem jest sam framework django, ustawiając np stringi w urls.py z logicznego punktu widznia konfigurujesz kontroler. Czyli to nie jest tak że kontrolera nie ma, po prostu w django nie leży on w domenie zainteresowań programisty. Kolejna różnica to T czyli template. W MVT mamy rozdział pomiędzy widokiem (który wybiera które dane mają być przekazane do template), i template czyli sposobem, w jaki te dane zostaną zaprezentowane. Template w django jest samą strukturą dokumentu html + właśnie te dane które dostarczył widok. Zauważ że działanie template jest uwarunkowane zgodnością nazw danych. Jeżeli zgodności nie będzie to template będzie błędny, a nie view ani model, czyli template jest elementem paradoksalnie najmniej znaczącym w tej układance. Jest to zaletą MVT. Dzięki temu rozdziałowi jeden template może być użyty w paru widokach.
+>
 
+[](https://hackersandslackers.com/your-first-flask-application)
 
 ## Template language - Jinja2
 
@@ -263,5 +266,16 @@ Map([<Rule '/otomoto' (GET, HEAD, OPTIONS) -> otomoto>,
  <Rule '/' (GET, HEAD, OPTIONS) -> home>,
  <Rule '/static/<filename>' (GET, HEAD, OPTIONS) -> static>])
 >>>
+```
+
+
+
+```python
+# name: Charlie
+/hello/?name=Charlie
+
+# name: Charlie
+# favorite_color: green
+/hello/?name=Charlie&favorite_color=green
 ```
 
