Fix: clean-up in OpenCV, Docker, Python roadmap (yay,images) articles

--- a/_posts/2020-05-12-OPENCV.md
+++ b/_posts/2020-05-12-OPENCV.md
@@ -1,37 +1,157 @@
 ---
 layout: post
-title: "OpenCV"
-categories: Python
+title: "OpenCV Roadmap"
+categories: OpenCV
 author: "Michał"
 math: true
 ---
 
 
+# OpenCV 
 
-# OpenCV
+Szybkie wprowadzenie: [Learn X in Y minutes: OpenCV](https://learnxinyminutes.com/docs/opencv/)
+
+Wczytanie OpenCV, Numpy i Pillow:
+```python
+# sudo apt install libgl1-mesa-glx
+import cv2
+
+import numpy as np
+from PIL import Image
+```
+
+## Podstawowe operacje
+
+Stworzenie pustego obrazu i wyświetlenie z pomoca biblioteki Pillow: 
+
+```python
+img = np.zeros((100,120,3), dtype='uint8')
+Image.fromarray(img)
+```
+
+Wczytanie istniejącego obrazu:
+```python
+img = cv2.imread('Lenna.png')
+Image.fromarray(img)
+```
+
+Numpy przechowuje kanały kolorów jako RGB, OpenCV zaś jako BGR
+
+* Matplotlib pyplot.imshow(): M x N x 3 image, where last dimension is RGB.
+* OpenCV cv2.imshow(): M x N x 3 image, where last dimension is BGR
+
+OpenCV zawiera funkcję która pozwala przekonwertować kanały. Można też skorzystać z pomocy Numpy, choć [nie jest to optymalne](https://answers.opencv.org/question/219040/fastest-way-to-convert-bgr-rgb-aka-do-not-use-numpy-magic-tricks/):
+
+```python
+img = cv2.cvtColor(img, cv2.COLOR_BGR2RGB)  # or numpy:
+img = img[...,::-1]  # or:
+img = img[:,:,::-1]
+```
+
+Wycięcie fragmentu zdjęcia
+```python
+# img_sliced = img[y1:y2,x1:x2]
+img = img[0:200, 0:200, :]
+```
+
+Zapisywanie obrazu:
+```python
+cv2.imwrite('save.jpg', img)
+```
+
+## Rysowanie
+```python
+cv2.line(img, (0,0), (200,200), (255,0,0), 5)
+cv2.circle(img, (100,100), 50, (255,0,0), 5)
+cv2.rectangle(img, (10,10), (100,100), (255,0,0), 5 )
+```
+
+COMPUTER VISION I
+Module 1 :Getting Started with OpenCV
+   1. Introduction to computer vision
+   2. Basic image operations
+   3. Mathematical operations on images
+   4. Sunglass filter : A simple application
+   5. Bitwise operations
+   6. Image Annotation
+   7. QR code detection
+
+Module 2 : Video IO and GUI
+   1. Video IO using HighGUI
+   2. Keyboard as input device
+   3. Using the mouse for image annotation
+   4. Adding trackbar controller to your OpenCV application
+
+Module 3 : Binary Image Processing
+   1. Thresholding
+   2. Erosion / Dilation
+   3. Implementing morphological operations from scratch.
+   4. Opening and Closing
+   5. Connected Component Analysis
+   6. Contour Analysis
+   7. Blob Detection
+   8. Coin Detection
+
+Module 4 : Image Enhancement and Filtering
+   1. Color Spaces
+   2. Color Transforms
+   3. Image Filtering
+   4. Image Smoothing
+   5. Image Gradients
+   6. Autofocus Application
+   
+Module 5 : Advanced Image Processing and Computational Photography
+   1. Hough Transforms
+   2. High Dynamic Range Imaging
+   3. Seamless Cloning
+   4. Image Inpainting
+   
+Module 6 : Geometric Transforms and Image Features
+   1. Affine Transform
+   2. Homography
+   3. Image Features
+   4. Feature Matching
+   5. Image Alignment
+   6. Creating Panoramas
+   7. Finding known objects in an image
+   8. Selfie Application 1:
+      * Instagram Filters
+      * Blemish Removal
+      * Green Screening
+      
+Module 7 : Image Segmentation and Recognition
+   1. Image segmentation using GrabCut
+   2. Introduction to AI
+   3. Object Detection
+   4. Image Classification
+   
+Module 8 : Video Analysis
+   1. Motion Estimation using Optical Flow
+   2. Object Tracking
+   3. Kalman Filtering
+   4. Meanshift and Camshift
+   
+Module 9 : Deep Learning with OpenCV
+   1. Image Classification
+   2. Object Detection
+   3. Face Detection
+   4. Human Pose Estimation
+   5. Selfie Application 
+      * Skin smoothing
+      * Sunglass filter
+   6. Document Scanner
+   7. Detection and Tracking
+
 
 [OpenCV Python Tutorials](https://opencv-python-tutroals.readthedocs.io)
 
-# Erosion
+# Morphological Transformations  
 
-For an erosion, you examine all of the pixels in a pixel neighbourhood that are touching the structuring element.  If **every non-zero pixel** is touching a structuring element pixel that is 1, then the output  pixel in the corresponding centre position with respect to the input is  1.  If there is at least one non-zero pixel that **does not** touch a structuring pixel that is 1, then the output is 0.  
+**Erosion & Dilation**
 
-In terms of the rectangular structuring element, you need to make  sure that every pixel in the structuring element is touching a non-zero  pixel in your image for a pixel neighbourhood.  If it isn't, then the  output is 0, else 1.  This effectively eliminates small spurious areas  of noise and also decreases the area of objects slightly.
+Erosion: Wartośći pikseli sa uśredniane w dół.
 
-The size factors in where the larger the rectangle, the more  shrinking is performed.  The size of the structuring element is a  baseline where any objects that are smaller than this rectangular  structuring element, you can consider them as being filtered and not  appearing in the output.  Basically, choosing a 1 x 1 rectangular  structuring element is the same as the input image itself because that  structuring element fits all pixels inside it as the pixel is the  smallest representation of information possible in an image.
+Dilation: wartośći pikseli są uśredniane w górę.
 
-# Dilation
-
-Dilation is the opposite of erosion.  If there is at least one  non-zero pixel that touches a pixel in the structuring element that is  1, then the output is 1, else the output is 0.  You can think of this as slightly enlarging object areas and making small islands bigger.
-
-The implications with size here is that the larger the structuring  element, the larger the areas of the objects will be and the larger the  isolated islands become.
-
-------
-
-What you're doing is an erosion first followed by a dilation.  This is what is known as an **opening** operation.  The purpose of this operation is to remove small islands of noise while (trying to) maintain the areas of the larger objects in  your image.  The erosion removes those islands while the dilation grows  back the larger objects to their original sizes.
-
-You follow this with an erosion again for some reason, which I can't quite understand, but that's ok.
-
-------
-
-What I would personally do is perform a **closing**  operation first which is a dilation followed by an erosion.  Closing  helps group areas that are close together into a single object.  As  such, you see that there are some larger areas that are close to each  other that should probably be joined before we do anything else.  As  such, I would do a closing first, then do an **opening** after so that we can remove the isolated noisy areas.  Take note that I'm going to make the closing structuring element size **larger** as I want to make sure I get nearby pixels and the opening structuring element size **smaller** so that I don't want to mistakenly remove any of the larger areas.
+Szeroki opis na [StackOverflow](https://stackoverflow.com/a/30380543)
+[Morphological Transformations](http://www.codebind.com/python/opencv-python-tutorial-beginners-morphological-transformations/)
