--- a/_posts/2020-08-05-Docker.md
+++ b/_posts/2020-08-05-Docker.md
@@ -72,4 +72,4 @@ docker container start {id}
 Jeżeli potrzebny jest jakiś pakie który nie jest dostepny w pobranym obrazie, to potrzebna będzie jego modyfikacja (zmiana pliku dockerfile). Ten etap jeszcze przede mną, ale myśle ze wkrótce go tutaj dopiszę.
 
 
-
+Dockerfile : https://github.com/jupyter/docker-stacks/blob/master/scipy-notebook/Dockerfile
