Update: Regex & OpenCV

--- a/_posts/2020-05-12-OPENCV.md
+++ b/_posts/2020-05-12-OPENCV.md
@@ -6,6 +6,10 @@ author: "Michał"
 math: true
 ---
 
+Ogolne informacje o CV
+https://www.reddit.com/r/computervision/
+
+Wykłady AGH: http://home.agh.edu.pl/~jsw/aipofm/
 
 # OpenCV 
 
@@ -65,6 +69,45 @@ cv2.line(img, (0,0), (200,200), (255,0,0), 5)
 cv2.circle(img, (100,100), 50, (255,0,0), 5)
 cv2.rectangle(img, (10,10), (100,100), (255,0,0), 5 )
 ```
+
+## Operacje morfologiczne
+Bardzo dobry opis operacji morfologicznych znajduje się na polskiej wersji Wikipedi, np:
+[Dylatacja](https://pl.wikipedia.org/wiki/Cyfrowe_przetwarzanie_obrazów_binarnych#Dylatacja) i 
+[Erozja](https://pl.wikipedia.org/wiki/Cyfrowe_przetwarzanie_obrazów_binarnych#Erozja)
+
+```
+opening(A) = dilate(erode(A))
+closing(A) = erode(dilate(A))
+```
+
+Operatory tophat (ekstrakcja obszarów jasnych) i blackhat (ekstrakcja obszarów ciemnych) służą odpowiednio ekstrakcji jasnych i ciemnych obszarów w obrazie (poziom jasności określany w odniesieniu do najbliższego otoczenia). 
+
+tophat(A) = A − open(A)
+blackhat(A) = close(A) − A
+
+
+### Ciekawe projekty
+
+Poczatkujące:
+- [text skew correction](https://www.pyimagesearch.com/2017/02/20/text-skew-correction-opencv-python/)
+- [Recognizing LCD Digits](https://www.pyimagesearch.com/2017/02/13/recognizing-digits-with-opencv-and-python/)
+- [Rotate Images](https://www.pyimagesearch.com/2017/01/02/rotate-images-correctly-with-opencv-and-python/)
+- [Watermarking images](https://www.pyimagesearch.com/2016/04/25/watermarking-images-with-opencv-and-python/)
+- [Determining object color](https://www.pyimagesearch.com/2016/02/15/determining-object-color-with-opencv/)
+- [Shape detection](https://www.pyimagesearch.com/2016/02/08/opencv-shape-detection/)
+- [center of contour](https://www.pyimagesearch.com/2016/02/01/opencv-center-of-contour/)
+- [panorama stitching](https://www.pyimagesearch.com/2016/01/11/opencv-panorama-stitching/)
+
+
+Zaawansowane:
+- [Sudoku Solver](https://www.pyimagesearch.com/2020/08/10/opencv-sudoku-solver-and-ocr/)
+- [Segmentacja obrazu GrabCut](https://www.pyimagesearch.com/2020/07/27/opencv-grabcut-foreground-segmentation-and-extraction/)
+- [OpenCV Selective Search](https://www.pyimagesearch.com/2020/06/29/opencv-selective-search-for-object-detection/)
+- [Open CV inpainting](https://www.pyimagesearch.com/2020/05/18/image-inpainting-with-opencv-and-python/)
+- [Face Detection & Blur](https://www.pyimagesearch.com/2020/04/06/blur-and-anonymize-faces-with-opencv-and-python/)
+- [Video: Scene Boundaries detection](https://www.pyimagesearch.com/2019/08/19/simple-scene-boundary-shot-transition-detection-with-opencv/)
+- [Holistically-Nested Edge Detection](https://www.pyimagesearch.com/2019/03/04/holistically-nested-edge-detection-with-opencv-and-deep-learning/)
+- [b&W images Colorization](https://www.pyimagesearch.com/2019/02/25/black-and-white-image-colorization-with-opencv-and-deep-learning/)
 
 COMPUTER VISION I
 Module 1 :Getting Started with OpenCV
@@ -155,3 +198,4 @@ Dilation: wartośći pikseli są uśredniane w górę.
 
 Szeroki opis na [StackOverflow](https://stackoverflow.com/a/30380543)
 [Morphological Transformations](http://www.codebind.com/python/opencv-python-tutorial-beginners-morphological-transformations/)
+[Morphological transformations with OpenCV in Python](http://datahacker.rs/006-morphological-transformations-with-opencv-in-python/)
