Update: post content for new template

--- a/_posts/2019-12-20-Jupyter.md
+++ b/_posts/2019-12-20-Jupyter.md
@@ -8,6 +8,8 @@ math: true
 
 
 
+Własny serwer VPS z Jupyter to możliwość pracy z każdego miejsca na świecie. 
+
 # Jupyter
 
 `CTRL + /` - komentowanie (jednej lub wielu) linii kodu
