--- a/_posts/2020-05-12-OPENCV.md
+++ b/_posts/2020-05-12-OPENCV.md
@@ -1,15 +1,14 @@
 ---
 layout: post
-title: "OpenCV Roadmap"
+title: "OpenCV 🖼️ Roadmap"
 categories: OpenCV
 author: "Michał"
 math: true
 ---
 
-Ogolne informacje o CV
-https://www.reddit.com/r/computervision/
+[Ogólne informacje o CV reddit](https://www.reddit.com/r/computervision/)
 
-Wykłady AGH: http://home.agh.edu.pl/~jsw/aipofm/
+[Wykłady AGH](http://home.agh.edu.pl/~jsw/aipofm/)
 
 # OpenCV 
 
@@ -142,13 +141,13 @@ Module 4 : Image Enhancement and Filtering
    4. Image Smoothing
    5. Image Gradients
    6. Autofocus Application
-   
+
 Module 5 : Advanced Image Processing and Computational Photography
    1. Hough Transforms
    2. High Dynamic Range Imaging
    3. Seamless Cloning
    4. Image Inpainting
-   
+
 Module 6 : Geometric Transforms and Image Features
    1. Affine Transform
    2. Homography
@@ -162,18 +161,19 @@ Module 6 : Geometric Transforms and Image Features
       * Blemish Removal
       * Green Screening
       
+
 Module 7 : Image Segmentation and Recognition
    1. Image segmentation using GrabCut
    2. Introduction to AI
    3. Object Detection
    4. Image Classification
-   
+
 Module 8 : Video Analysis
    1. Motion Estimation using Optical Flow
    2. Object Tracking
    3. Kalman Filtering
    4. Meanshift and Camshift
-   
+
 Module 9 : Deep Learning with OpenCV
    1. Image Classification
    2. Object Detection
