Update: content adjustment

--- a/_posts/2020-05-03-JSON.md
+++ b/_posts/2020-05-03-JSON.md
@@ -8,13 +8,9 @@ math: true
 
 
 
+JSON w skrócie: lekki, tekstowy format wymiany danych (w odróżnieniu od XML). Pomimo swojej nazwy, JSON jest formatem niezależnym od konkretnego języka programowania. Kodowany za pomocą UTF-8, który jest dla JSON domyślnym systemem kodowania. Ma podobną postać do zapisu słownika Python.
+
 # JSON
-
-- lekki, tekstowy format wymiany danych (w odróżnieniu od XML),
--  pomimo nazwy (), JSON jest formatem niezależnym od konkretnego języka programowania,
-- kodowany za pomocą UTF-8, który jest dla JSON domyślnym systemem kodowania,
-- podobna postać do zapisu słownika Python
-
 ```json
 {    "name":"Luke Skywalker",
     "eye_color":"Blue",
