--- a/_posts/2020-05-12-OPENCV.md
+++ b/_posts/2020-05-12-OPENCV.md
@@ -6,6 +6,10 @@ author: "Michał"
 math: true
 ---
 
+
+
+Sztandarowa biblioteka do Computer Vision. Pozanłem pythona na tyle że pora zacząć wykorzystywać go do czegoś bardziej interesującego :) 
+
 [Ogólne informacje o CV reddit](https://www.reddit.com/r/computervision/)
 
 [Wykłady AGH](http://home.agh.edu.pl/~jsw/aipofm/)
