Update: content adjustment

--- a/_posts/2020-05-13-ROS.md
+++ b/_posts/2020-05-13-ROS.md
@@ -8,6 +8,8 @@ math: true
 
 
 
+Ostatni z powodów dla których wybrałem Python jako język do nauki. Robot Operating System. Prawdopodobnie skończę na kursie od The Construct, ale pomyślałem że spróbuję wynotować kilka rzeczy na własną rękę.
+
 # ROS
 
 A *node* is a process that performs computation. 
