Update: content adjustment

--- a/_posts/2019-12-20-Jupyter.md
+++ b/_posts/2019-12-20-Jupyter.md
@@ -8,7 +8,7 @@ math: true
 
 
 
-Własny serwer VPS z Jupyter to możliwość pracy z każdego miejsca na świecie. 
+Własny serwer VPS z Jupyter to możliwość pracy z każdego miejsca na świecie.  Wszystkie wskazówki związane z Jupyter w jednym miejscu.
 
 # Jupyter
 
@@ -20,10 +20,5 @@ Własny serwer VPS z Jupyter to możliwość pracy z każdego miejsca na świeci
 
 
 
-[Newsletter Uczymy Maszyny](https://us20.campaign-archive.com/home/?u=75f8b217047c7703de3c71ca4&id=9ab9c19314)
 
-[Learn X in Y minutes](https://learnxinyminutes.com/docs/python/)
 
-[How to make mistakes in Python](https://www.oreilly.com/programming/free/files/how-to-make-mistakes-in-python.pdf)
-
-[Kurs Python](https://mateuszrus.pl/category/kursy/kurs-python/)
