--- a/_posts/2020-04-23-Linux.md
+++ b/_posts/2020-04-23-Linux.md
@@ -5,7 +5,7 @@ categories: Linux
 author: "Michał"
 ---
 
-
+Najważniejsze (podstawowe) informacje pomocne przy pracy z systemem Linuks.
 
 ## Dowiązanie symboliczne
 
