--- a/_posts/2020-05-07-RESTAPI.md
+++ b/_posts/2020-05-07-RESTAPI.md
@@ -8,6 +8,10 @@ math: true
 
 
 
+REST API - krótki przewodnik po najważniejszych informacjach.
+
+
+
 # REST API
 
 [REST API Quick Tips](https://www.restapitutorial.com/lessons/restquicktips.html)
