Update: ROS/ Jupyter posts

--- a/_posts/2020-05-13-ROS.md
+++ b/_posts/2020-05-13-ROS.md
@@ -8,7 +8,11 @@ math: true
 
 
 
-Ostatni z powodów dla których wybrałem Python jako język do nauki. Robot Operating System. Prawdopodobnie skończę na kursie od The Construct, ale pomyślałem że spróbuję wynotować kilka rzeczy na własną rękę.
+Robot Operating System aka ROS - kolejny z powodów dla których wybrałem Python jako język do nauki. Prawdopodobnie skończę na kursie od The Construct, ale pomyślałem że spróbuję wynotować tutaj kilka rzeczy na własną rękę.
+
+[The ROS Classic Basic Knowledge Map (PDF)](https://www.theconstructsim.com/wp-content/uploads/2020/02/ROS-CLASSIC-MIND-MAP.pdf)
+
+<img src="{{site.url}}/images/2020_08/ros.png" style="display: block; margin: auto;" />
 
 # ROS
 
