OpenCV introduction update

--- a/_posts/2020-05-12-OPENCV.md
+++ b/_posts/2020-05-12-OPENCV.md
@@ -8,13 +8,20 @@ math: true
 
 
 
-Sztandarowa biblioteka do Computer Vision. Pozanłem pythona na tyle że pora zacząć wykorzystywać go do czegoś bardziej interesującego :) 
+Sztandarowa biblioteka do Computer Vision. Pozanłem Pythona (i kupiłem [OpenCV AI Kit](https://www.kickstarter.com/projects/opencv/opencv-ai-kit) :D ) na tyle, że pora zacząć wykorzystywać go do czegoś bardziej interesującego. 
 
-[Ogólne informacje o CV reddit](https://www.reddit.com/r/computervision/)
+### Jupyter Notebook
+[Jupyter Notebook](https://nbviewer.jupyter.org/github/mgurg/mgurg.github.io/blob/master/images/ipnyb/opencv.ipynb) - uznałem że w przypadku OpenCV wygodniej będzie umieszczać treść w notatnikach Jupytera niż pisać ją na blogu. Dlatego każdy wpis z OpenCV będzie posiadał odnośnik do niego.
 
-[Wykłady AGH](http://home.agh.edu.pl/~jsw/aipofm/)
+### Przydatne linki
+Zbiór linków z przydatnymi informacjami na start:
+[Reddit: r/computervision/](https://www.reddit.com/r/computervision/)
 
-# OpenCV 
+[Wykłady AGH - Morphological Transformations](http://home.agh.edu.pl/~jsw/aipofm/)
+
+[OpenCV Python Tutorials](https://opencv-python-tutroals.readthedocs.io)
+
+# OpenCV - szybkie wprowadzenie
 
 Szybkie wprowadzenie: [Learn X in Y minutes: OpenCV](https://learnxinyminutes.com/docs/opencv/)
 
@@ -91,8 +98,8 @@ blackhat(A) = close(A) − A
 
 ### Ciekawe projekty
 
-Poczatkujące:
-- [text skew correction](https://www.pyimagesearch.com/2017/02/20/text-skew-correction-opencv-python/)
+Początkujące:
+- [Text skew correction](https://www.pyimagesearch.com/2017/02/20/text-skew-correction-opencv-python/)
 - [Recognizing LCD Digits](https://www.pyimagesearch.com/2017/02/13/recognizing-digits-with-opencv-and-python/)
 - [Rotate Images](https://www.pyimagesearch.com/2017/01/02/rotate-images-correctly-with-opencv-and-python/)
 - [Watermarking images](https://www.pyimagesearch.com/2016/04/25/watermarking-images-with-opencv-and-python/)
@@ -111,6 +118,10 @@ Zaawansowane:
 - [Video: Scene Boundaries detection](https://www.pyimagesearch.com/2019/08/19/simple-scene-boundary-shot-transition-detection-with-opencv/)
 - [Holistically-Nested Edge Detection](https://www.pyimagesearch.com/2019/03/04/holistically-nested-edge-detection-with-opencv-and-deep-learning/)
 - [b&W images Colorization](https://www.pyimagesearch.com/2019/02/25/black-and-white-image-colorization-with-opencv-and-deep-learning/)
+
+## OpenCV - najważniejsze zagadnienia
+
+Lista tematów przerabianych na oficjalnych [kursach od OpenCV](https://opencv.org/courses/)
 
 COMPUTER VISION I
 Module 1 :Getting Started with OpenCV
@@ -165,7 +176,6 @@ Module 6 : Geometric Transforms and Image Features
       * Blemish Removal
       * Green Screening
       
-
 Module 7 : Image Segmentation and Recognition
    1. Image segmentation using GrabCut
    2. Introduction to AI
@@ -190,16 +200,4 @@ Module 9 : Deep Learning with OpenCV
    7. Detection and Tracking
 
 
-[OpenCV Python Tutorials](https://opencv-python-tutroals.readthedocs.io)
 
-# Morphological Transformations  
-
-**Erosion & Dilation**
-
-Erosion: Wartośći pikseli sa uśredniane w dół.
-
-Dilation: wartośći pikseli są uśredniane w górę.
-
-Szeroki opis na [StackOverflow](https://stackoverflow.com/a/30380543)
-[Morphological Transformations](http://www.codebind.com/python/opencv-python-tutorial-beginners-morphological-transformations/)
-[Morphological transformations with OpenCV in Python](http://datahacker.rs/006-morphological-transformations-with-opencv-in-python/)
