--- a/_posts/2020-05-12-OPENCV.md
+++ b/_posts/2020-05-12-OPENCV.md
@@ -11,7 +11,7 @@ math: true
 Sztandarowa biblioteka do Computer Vision. Pozanłem Pythona (i kupiłem [OpenCV AI Kit](https://www.kickstarter.com/projects/opencv/opencv-ai-kit) :D ) na tyle, że pora zacząć wykorzystywać go do czegoś bardziej interesującego. 
 
 ### Jupyter Notebook
-[Jupyter Notebook](https://nbviewer.jupyter.org/github/mgurg/mgurg.github.io/blob/master/images/ipnyb/opencv.ipynb) - uznałem że w przypadku OpenCV wygodniej będzie umieszczać treść w notatnikach Jupytera niż pisać ją na blogu. Dlatego każdy wpis z OpenCV będzie posiadał odnośnik do niego.
+**[Jupyter Notebook](https://nbviewer.jupyter.org/github/mgurg/mgurg.github.io/blob/master/images/ipnyb/opencv.ipynb)** - uznałem że w przypadku OpenCV wygodniej będzie umieszczać treść w notatnikach Jupytera niż pisać ją na blogu. Dlatego każdy wpis z OpenCV będzie posiadał odnośnik do niego.
 
 ### Przydatne linki
 Zbiór linków z przydatnymi informacjami na start:
